syntax = "proto3";
package pb;

message Checkin {
    int64 id = 1;
    int64 wid = 2;
    int64 activityId = 3;
    int64 wuid = 4;
    int64 liner = 5;
    int64 total = 6;
    int64 lastcheckin = 7;
    int64 createdAt = 8;
    int64 updatedAt = 9;
}

message CheckinList {
    int64 index = 1;
    int64 limit = 2;
    int64 total = 3;
    repeated Checkin checkins = 4;
}